@@ -13,6 +13,8 @@ update-manager (1:0.132.1) UNRELEASED; urgency=low
   * DistUpgrade/DistUpgradeController.py:
     - if universe is not enabled, explain that the demoted packages
       will be suggested for removal in the cleanup stage
+  * UpdateManager/Core/MetaRelease.py:
+    - fix urlopen() crash on hardy->lucid cdrom upgrades
 
  -- Michael Vogt <michael.vogt@ubuntu.com>  Wed, 17 Feb 2010 23:44:00 +0100
 
